--- a/밀집도 위험도 테이블 생성.ipynb
+++ b/밀집도 위험도 테이블 생성.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#년도별 가금농가 수 데이터\n",
+    "#년도별 가금농가 수 데이터 불러오기\n",
     "nonga = pd.read_csv('data/가금농가수(년도별).csv', encoding='euc-kr')"
    ]
   },
@@ -180,6 +180,7 @@
     }
    ],
    "source": [
+    "#년도별 농가 수 데이터\n",
     "nonga.head()"
    ]
   },
@@ -269,6 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#컬럼 정제\n",
     "mm = mm.drop([0,1],axis=0)\n",
     "mm = mm.reset_index()\n",
     "mm = mm.drop(['index'],axis=1)"
@@ -484,6 +486,7 @@
     }
    ],
    "source": [
+    "#지역,년도별 농가수와 지역별 면적 합치기\n",
     "nonga = pd.concat([cc, mmm], axis=1)\n",
     "nonga.head()"
    ]
@@ -548,6 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#농가 밀집도 계산\n",
     "nonga['2012년'] = nonga['2012년']/nonga['면적']\n",
     "nonga['2013년'] = nonga['2013년']/nonga['면적']\n",
     "nonga['2014년'] = nonga['2014년']/nonga['면적']\n",
@@ -695,6 +699,7 @@
     }
    ],
    "source": [
+    "#농가 밀집도\n",
     "nonga.head()"
    ]
   },
@@ -2778,7 +2783,7 @@
     }
    ],
    "source": [
-    "#2012~2020 데이터만 있어서 해당년도 삭제\n",
+    "#2012~2020 데이터만 있어서 해당년도 외의 데이터 삭제\n",
     "AI_occur_local_ym=AI_occur_month.query('2011 < year < 2021')\n",
     "AI_occur_local_ym"
    ]
@@ -2946,6 +2951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#년도별로 정리\n",
     "for n1, group in AI_occur_local_ym.groupby(['month']):\n",
     "    group.reset_index(inplace=True, drop=True)\n",
     "    if group.loc[0,'month'] in [1,2,3,4,5,6,7,8,9,10,11,12]:\n",
@@ -3794,6 +3800,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 526,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#밀집도 구간별로 나눠서 피어슨, 스피어만 상관계수 검정으로 데이터 분석\n",
+    "mlzp_gun2 = pd.read_csv('700.csv', encoding='utf-8')\n",
+    "mlzp_gun1 = pd.read_csv('300~400.csv', encoding='utf-8')\n",
+    "mlzp_gun3 = pd.read_csv('100.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 528,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 529,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.17981592089759993, 0.6434093193186762)"
+      ]
+     },
+     "execution_count": 529,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr = stats.pearsonr(mlzp_gun2.밀집도, mlzp_gun2.발생건수)\n",
+    "corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 530,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpearmanrResult(correlation=0.10004762340521331, pvalue=0.6928526829238087)"
+      ]
+     },
+     "execution_count": 530,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho1 = stats.spearmanr(mlzp_gun1.밀집도, mlzp_gun1.발생건수)\n",
+    "rho1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 531,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpearmanrResult(correlation=0.052223296786709346, pvalue=0.8938530686299837)"
+      ]
+     },
+     "execution_count": 531,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho2 = stats.spearmanr(mlzp_gun2.밀집도, mlzp_gun2.발생건수)\n",
+    "rho2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 532,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpearmanrResult(correlation=0.30796759894769954, pvalue=0.005158715525880536)"
+      ]
+     },
+     "execution_count": 532,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho3 = stats.spearmanr(mlzp_gun3.밀집도, mlzp_gun3.발생건수)\n",
+    "rho3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_outlier(df=None, column=None, weight=1.5):\n",
+    "    # target 값과 상관관계가 높은 열을 우선적으로 진행\n",
+    "    quantile_25 = np.percentile(df[column].values, 25)\n",
+    "    quantile_75 = np.percentile(df[column].values, 75)\n",
+    "\n",
+    "    IQR = quantile_25 - quantile_75\n",
+    "    IQR_weight = IQR*weight\n",
+    "\n",
+    "    lowest = quantile_25 - IQR_weight\n",
+    "    highest = quantile_75 + IQR_weight\n",
+    "\n",
+    "    outlier_idx = df[column][ (df[column] < lowest) | (df[column] > highest) ].index\n",
+    "    return outlier_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 신뢰구간 기준 만들기\n",
+    "confidence_dic={}\n",
+    "for sido, group in new_A.groupby(['지역']):\n",
+    "    group.reset_index(inplace=True, drop=True)\n",
+    "    confidence_dic[sido]={}\n",
+    "    temp=group.groupby(['month']).mean()\n",
+    "    for month,group in temp.groupby(['month']):\n",
+    "        if len(group)==0:\n",
+    "             continue\n",
+    "        group.reset_index(inplace=True, drop=True)\n",
+    "        # 그룹내 이상값 제거\n",
+    "        outlier_idx = get_outlier(df=group, column='밀집도', weight=1.5)\n",
+    "        group.drop(outlier_idx, axis=0, inplace=True)\n",
+    "        outlier_idx = get_outlier(df=group, column='발생건수', weight=1.5)\n",
+    "        group.drop(outlier_idx, axis=0, inplace=True)\n",
+    "        confidence_dic[sido][month]=group.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 506,
    "metadata": {},
    "outputs": [],
@@ -4406,364 +4562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A.to_csv('밀집도&발생건수.csv', encoding='euc-kr')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 517,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>지역</th>\n",
-       "      <th>month</th>\n",
-       "      <th>밀집도</th>\n",
-       "      <th>발생건수</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>강원도</td>\n",
-       "      <td>1</td>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>강원도</td>\n",
-       "      <td>2</td>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>강원도</td>\n",
-       "      <td>3</td>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>강원도</td>\n",
-       "      <td>4</td>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>강원도</td>\n",
-       "      <td>5</td>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    지역  month         밀집도  발생건수\n",
-       "0  강원도      1  205.556164   2.0\n",
-       "1  강원도      2  205.556164   0.0\n",
-       "2  강원도      3  205.556164   0.0\n",
-       "3  강원도      4  205.556164   0.0\n",
-       "4  강원도      5  205.556164   0.0"
-      ]
-     },
-     "execution_count": 517,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_A = pd.read_csv('밀집도&발생건수.csv', encoding='euc-kr')\n",
-    "new_A.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 518,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_outlier(df=None, column=None, weight=1.5):\n",
-    "    # target 값과 상관관계가 높은 열을 우선적으로 진행\n",
-    "    quantile_25 = np.percentile(df[column].values, 25)\n",
-    "    quantile_75 = np.percentile(df[column].values, 75)\n",
-    "\n",
-    "    IQR = quantile_25 - quantile_75\n",
-    "    IQR_weight = IQR*weight\n",
-    "\n",
-    "    lowest = quantile_25 - IQR_weight\n",
-    "    highest = quantile_75 + IQR_weight\n",
-    "\n",
-    "    outlier_idx = df[column][ (df[column] < lowest) | (df[column] > highest) ].index\n",
-    "    return outlier_idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 519,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 신뢰구간 기준 만들기\n",
-    "confidence_dic={}\n",
-    "for sido, group in new_A.groupby(['지역']):\n",
-    "    group.reset_index(inplace=True, drop=True)\n",
-    "    confidence_dic[sido]={}\n",
-    "    temp=group.groupby(['month']).mean()\n",
-    "    for month,group in temp.groupby(['month']):\n",
-    "        if len(group)==0:\n",
-    "             continue\n",
-    "        group.reset_index(inplace=True, drop=True)\n",
-    "        # 그룹내 이상값 제거\n",
-    "        outlier_idx = get_outlier(df=group, column='밀집도', weight=1.5)\n",
-    "        group.drop(outlier_idx, axis=0, inplace=True)\n",
-    "        outlier_idx = get_outlier(df=group, column='발생건수', weight=1.5)\n",
-    "        group.drop(outlier_idx, axis=0, inplace=True)\n",
-    "        confidence_dic[sido][month]=group.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 520,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>밀집도</th>\n",
-       "      <th>발생건수</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>205.556164</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              밀집도  발생건수\n",
-       "count    1.000000   1.0\n",
-       "mean   205.556164   2.0\n",
-       "std           NaN   NaN\n",
-       "min    205.556164   2.0\n",
-       "25%    205.556164   2.0\n",
-       "50%    205.556164   2.0\n",
-       "75%    205.556164   2.0\n",
-       "max    205.556164   2.0"
-      ]
-     },
-     "execution_count": 520,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confidence_dic['강원도'][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 521,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['강원도', '경기도', '경상남도', '경상북도', '광주광역시', '대구광역시', '대전광역시', '부산광역시', '서울특별시', '세종특별자치시', '울산광역시', '인천광역시', '전라남도', '전라북도', '제주도', '충청남도', '충청북도'])"
-      ]
-     },
-     "execution_count": 521,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confidence_dic.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 522,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])"
-      ]
-     },
-     "execution_count": 522,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confidence_dic['전라남도'].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 523,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'경상남도', '충청남도', '제주도', '광주광역시', '전라남도', '서울특별시', '충청북도', '부산광역시', '인천광역시', '경기도', '강원도', '세종특별자치시', '경상북도', '전라북도', '대전광역시', '대구광역시', '울산광역시'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(set(new_A['지역'].values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 524,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# risk table 제작 (밀집도,발생건수로만)\n",
-    "for i in range(len(new_A)):\n",
-    "    sido=new_A.loc[i,'지역']\n",
-    "    if sido in confidence_dic.keys():\n",
-    "        density_75=confidence_dic[sido][month].loc['75%','밀집도']\n",
-    "        density_25=confidence_dic[sido][month].loc['25%','밀집도']\n",
-    "        occur_75=confidence_dic[sido][month].loc['75%','발생건수']\n",
-    "        occur_25=confidence_dic[sido][month].loc['25%','발생건수']\n",
-    "        density_IQR=density_75-density_25\n",
-    "        occur_IQR=density_75-density_25\n",
-    "        #밀집도\n",
-    "        if (new_A.loc[i,'밀집도']>=density_25-1.5*density_IQR) and (new_A.loc[i,'밀집도'] <= density_75+1.5*density_IQR):\n",
-    "            new_A.loc[i,'density_index']=10\n",
-    "        else:\n",
-    "            new_A.loc[i,'density_index']=0\n",
-    "        #발생건수\n",
-    "        if (new_A.loc[i,'발생건수']>=occur_25-1.5*occur_IQR) and (new_A.loc[i,'발생건수'] <= occur_75+1.5*occur_IQR):\n",
-    "            new_A.loc[i,'occur_index']=10\n",
-    "        else:\n",
-    "            new_A.loc[i,'occur_index']=0\n",
-    "    new_A.loc[i,'risk']=new_A.loc[i,'density_index']*0.5+new_A.loc[i,'occur_index']*0.5\n",
-    "    \n",
-    "new_A=new_A.fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 525,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of        지역  month         밀집도  발생건수  density_index  occur_index  risk\n",
-       "0     강원도      1  205.556164   2.0           10.0          0.0   5.0\n",
-       "1     강원도      2  205.556164   0.0           10.0          0.0   5.0\n",
-       "2     강원도      3  205.556164   0.0           10.0          0.0   5.0\n",
-       "3     강원도      4  205.556164   0.0           10.0          0.0   5.0\n",
-       "4     강원도      5  205.556164   0.0           10.0          0.0   5.0\n",
-       "..    ...    ...         ...   ...            ...          ...   ...\n",
-       "199  충청북도      8  258.894769   0.0           10.0          0.0   5.0\n",
-       "200  충청북도      9  258.894769   0.0           10.0          0.0   5.0\n",
-       "201  충청북도     10  258.894769   0.0           10.0          0.0   5.0\n",
-       "202  충청북도     11  258.894769  46.0           10.0          0.0   5.0\n",
-       "203  충청북도     12  258.894769  41.0           10.0         10.0  10.0\n",
-       "\n",
-       "[204 rows x 7 columns]>"
-      ]
-     },
-     "execution_count": 525,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_A.head"
+    "A.to_csv('density_rist_table_final.csv', encoding='euc-kr')"
    ]
   },
   {
@@ -4772,7 +4571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_A.to_csv(\"data/density_table_final10.csv\", encoding='utf-8-sig', index=False)"
+    "new_A.to_csv('data/density_risk_table_final.csv', encoding='utf-8-sig', index=False)"
    ]
   },
   {
